--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':lib')
+    compile "io.reactivex.rxjava2:rxandroid:${rxandroid}"
     compile "com.android.support:appcompat-v7:${appcompat}"
     testCompile "junit:junit:${junit}"
 }
