--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ ext {
 
     //region libraries
     rxjava = '2.1.7'
+    rxandroid = '2.0.1'
     appcompat = '26.0.0'
     junit = '4.12'
     //endregion
