--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -4,7 +4,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "io.reactivex.rxjava2:rxjava:${rxjava}"
 }
-
+jar {
+    baseName 'observablecollections'
+}
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
 
