--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -10,4 +10,4 @@ jar {
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
 
-apply from: 'deploy.gradle'//comment this
+//apply from: 'deploy.gradle'
