--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: meeDamian/github-release@2.0
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: 1.0.5
+        tag: ${{ github.run_id }}
         name: v1.0.5
         gzip: false
         files: build/libs/*.jar
