--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,9 @@ buildscript {
 
 allprojects {
     repositories {
-       google()
-       jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
+        mavenCentral()
+        google()
+        jcenter()
     }
 }
 
